maud/tests/warnings/non-string-literal.stderr
error: expected string
 --> $DIR/non-string-literal.rs:5:9
  |
5 |         42
  |         ^^
