maud/tests/warnings/non-string-literal.rs
use maud::html;

fn main() {
    html! {
        42
    };
}
